# src/Plugin/Magento/Framework/Webapi/Rest/Response/VersionContentType.php
@@ -5,15 +5,21 @@ declare(strict_types=1);
 namespace MyParcelNL\Magento\Plugin\Magento\Framework\Webapi\Rest\Response;
 
 use Magento\Framework\Webapi\Rest\Response;
-use MyParcelNL\Magento\Model\Rest\AbstractEndpoint;
-use MyParcelNL\Magento\Model\Rest\ProblemDetails;
+use MyParcelNL\Magento\Model\Rest\VersionContext;
 
 class VersionContentType
 {
+    private VersionContext $versionContext;
+
+    public function __construct(VersionContext $versionContext)
+    {
+        $this->versionContext = $versionContext;
+    }
+
     /**
      * After the full _render() cycle completes, set the appropriate Content-Type:
      * - Error responses get application/problem+json
-     * - Success responses get versioned application/json
+     * - Success responses get versioned application/json + Accept header with supported versions
      *
      * @param  Response $subject
      * @param  mixed    $result
@@ -21,30 +27,32 @@ class VersionContentType
      */
     public function afterPrepareResponse(Response $subject, $result)
     {
-        $errorHeader = $subject->getHeader(AbstractEndpoint::SIGNAL_ERROR_HEADER);
+        if (!$this->versionContext->isActive()) {
+            return $result;
+        }
 
-        if ($errorHeader) {
-            $subject->setHeader('Content-Type', ProblemDetails::CONTENT_TYPE, true);
-            $subject->clearHeader(AbstractEndpoint::SIGNAL_ERROR_HEADER);
-            $subject->clearHeader(AbstractEndpoint::SIGNAL_HEADER);
+        if ($this->versionContext->isError()) {
+            $subject->setHeader('Content-Type', 'application/problem+json; charset=utf-8', true);
 
             return $result;
         }
 
-        $versionHeader = $subject->getHeader(AbstractEndpoint::SIGNAL_HEADER);
-
-        if (!$versionHeader) {
-            return $result;
-        }
-
-        $version = (int) $versionHeader->getFieldValue();
+        $version = $this->versionContext->getNegotiatedVersion();
 
         $subject->setHeader(
             'Content-Type',
             'application/json; version=' . $version . '; charset=utf-8',
             true
         );
-        $subject->clearHeader(AbstractEndpoint::SIGNAL_HEADER);
+
+        $acceptParts = [];
+        foreach ($this->versionContext->getSupportedVersions() as $supportedVersion) {
+            $acceptParts[] = 'application/json; version=' . $supportedVersion;
+        }
+
+        if (!empty($acceptParts)) {
+            $subject->setHeader('Accept', implode(', ', $acceptParts), true);
+        }
 
         return $result;
     }
